2007-08-14  Ankit Jain  <jankit@novell.com>

	Fix bug #82398.
	* CSharpBindingCompilerManager.cs (GetResourceId): Run resgen with
	MONO_IOMAP=all.

2007-08-14  Mike Krüger <mkrueger@novell.com> 

	* Gui/CSharpTextEditorExtension.cs,
	  FormattingStrategy/CSharpIndentEngineStack.cs,
	  FormattingStrategy/CSharpIndentEngine.cs: Added support for
	  documentation comments 
	
	  (fixes bug 78578: Add XML Comment support to MonoDevelop and
	  integrate with tooltips).
	
	  + Auto complete of /// tags
	
	  + code completion for the xml documentation tags
	
	  + auto generation of a header body

2007-08-13  Mike Krüger <mkrueger@novell.com> 

	* Gui/CSharpTextEditorExtension.cs: Started to work on xml comment tag
	  support.

2007-08-10  Ankit Jain  <jankit@novell.com>

	Fix bug #82394.
	* CSharpBindingCompilerManager.cs (Compile): Abort build if error while
	generating resources.
	(GetResourceId): Refactor slightly to report error. Also, parse
	the line/col number for the CompilerError.
	(RegexErrorLinePos): New.

2007-08-09  Lluis Sanchez Gual <lluis@novell.com> 

	* CSharpBinding.addin.xml, Autotools/Makefile.am, CSharpBinding.mdp,
	  Makefile.am: Reorganized the extension point hierarchy. Embedded all
	  add-in manifests as resources.

2007-07-30  Lluis Sanchez Gual <lluis@novell.com> 

	* templates/CSharpSessionStateWebService.xft.xml,
	  templates/CSharpWebService.xft.xml: Removed unused files.

2007-07-30  Jeffrey Stedfast  <fejj@novell.com>

	* Parser/CodeGenerator.cs: Add ctor references too. Fixes bug
	#82204.

	* Gui/CSharpTextEditorExtension.cs: Handle indent-region by
	resetting state so that we don't get confused.

2007-07-27  Jeffrey Stedfast  <fejj@novell.com>

	* FormattingStrategy/CSharpFormattingStrategy.cs (FormatLine):
	Fixed to be a no-op.

2007-07-25  Jeffrey Stedfast  <fejj@novell.com>

	Fixes for bug #82179.

	* FormattingStrategy/CSharpIndentEngineStack.cs (Push): Added a
	second Push() method allowing the caller to force a particular
	indent.
